--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,3 +28,8 @@
 @import "blocks/home-clients";
 @import "blocks/home-contacts";
 @import "blocks/contacts-item";
+@import "blocks/social";
+@import "blocks/to-top";
+@import "blocks/page";
+
+
