--- a/src/scss/blocks/home-portfolio.scss
+++ b/src/scss/blocks/home-portfolio.scss
@@ -8,13 +8,15 @@
 }
 
 .home-portfolio__rightside { 
+  position: relative;
   padding: 160px 65px 0 100px;
 }
 
 .home-portfolio__view-all {
-  position: relative;
-  z-index: 1;
+  position: absolute;
+  bottom: 0;
   left: 50%;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,7 +40,7 @@
     z-index: 1;
     width: 145px;
     height: 75px;
-    background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 190 95"%3E%3Cpath fill="transparent" stroke="%23131313" d="M0 95L95 0l95 95z"/%3E%3C/svg%3E%0A');
+    background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 190 95"%3E%3Cpath fill="transparent" stroke="%23131313" d="M0 95L95 0l95 95z"/%3E%3C/svg%3E%0A') 50% 50% no-repeat;
     transform: translateX(-50%);
     transition: transform 0.5s;
   }
@@ -48,7 +50,7 @@
       background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 190 95"%3E%3Cpath fill="%23ea246e" d="M0 95L95 0l95 95z"/%3E%3C/svg%3E%0A');
     }
     &::after {
-      transform: scale(0.5) translate(-50%, -8px);
+      transform: translate(-50%, -20px) scale(0.5);
       transition: transform 0.5s;
     }
   }
