--- a/src/scss/blocks/page-wrapper.scss
+++ b/src/scss/blocks/page-wrapper.scss
@@ -1,10 +1,3 @@
-.page {
-  padding: 0 50px;
-  @media (max-width: $breakpoint-small) {
-    padding: 0;
-  }
-}
-
-.page__wrapper {
-  overflow: hidden;
+.page-wrapper {
+  overflow-x: hidden;
 }
