--- a/src/scss/blocks/service-item.scss
+++ b/src/scss/blocks/service-item.scss
@@ -14,14 +14,17 @@
     .service-item__desc {
       color: #f7f7f7;
     }
-    .service-item__link-text {
-      width: auto;
-      opacity: 1;
-      transform: translateX(0);
-      transition: opacity 0.25s, transform 0.25s;
-    }
-    .service-item__link-arrow {
-      fill: #fff;
+    .service-item__arrow {
+      &::before {
+        transform: scaleX(2.4);
+        background-color:#fff;
+        transition: transform 0.25s;
+      }
+      &::after {
+        transform: translateX(28px) rotate(45deg);
+        border-color: #fff;
+        transition: transform 0.25s;
+      }
     }
   }
 }
@@ -49,17 +52,29 @@
   align-items: center;
 }
 
-.service-item__link-text {
-  display: inline-block;
-  width: 0;
-  opacity: 0;
-  transform: translateX(-100%);
-  margin-right: 7px;
-  overflow: hidden;
-  color: #fff;
-}
-
-.service-item__link-arrow {
-  width: 22px;
-  height: 13px;
+.service-item__arrow {
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 21px;
+    height: 2px;
+    background: #000;
+    transform-origin: left;
+    transition: transform 0.25s, background-color 0.25s;
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    top: -3.5px;
+    left: 13px;
+    width: 7px;
+    height: 7px;
+    border-top: 2px solid #000;
+    border-right: 2px solid #000;
+    transform: rotate(45deg);
+    transition: transform 0.25s, border-color 0.25s;
+  }
 }
