--- a/src/scss/blocks/main-header.scss
+++ b/src/scss/blocks/main-header.scss
@@ -9,5 +9,25 @@
   position: absolute;
   top: 0;
   left: 50%;
+  z-index: 2;
   transform: translateX(-50%);
+  transition: background-color 0.25s;
+  &::before {
+    transition: transform 0.25s;
+  }
+  &::after {
+    transition: transform 0.25s;
+  }
+  &.active {
+    background-color: #353535;
+    transition: background-color 0.25s;
+    &::before {
+      transform: translateX(-50%) translateY(4px) rotate(-45deg);
+      transition: transform 0.25s;
+    }
+    &::after {
+      transform: translateX(-50%) translateY(-4px) rotate(45deg);
+      transition: transform 0.25s;
+    }
+  }
 }
