--- a/src/scss/blocks/home-services.scss
+++ b/src/scss/blocks/home-services.scss
@@ -1,7 +1,7 @@
-.services__title-wrapper {
+.home-services__title-wrapper {
   background-color: #672aa0;
 }
 
-.services__list {
+.home-services__list {
   @include reset-list;
 }
