--- a/src/scss/blocks/home-clients.scss
+++ b/src/scss/blocks/home-clients.scss
@@ -7,7 +7,7 @@
 }
 
 .home-clients__rightside {
-  padding: 100px 0;
+  padding: 100px 7%;
 }
 
 .home-clients__list {
@@ -18,8 +18,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 100%;
     text-align: center;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
+    @media (min-width: $breakpoint-medium) {
+      width: 50%;
+      margin-bottom: 150px;
+    }
   }
 }
