--- a/src/scss/blocks/project-item.scss
+++ b/src/scss/blocks/project-item.scss
@@ -1,6 +1,19 @@
 .project-item {
+  display: flex;
+  flex-direction: column;
   position: relative;
-  padding-left: 85px;
+  width: 100%;
+  @media (min-width: $breakpoint-small) {
+    width: 80%;
+  }
+  @media (min-width: $breakpoint-medium) {
+    // width: 690px;
+    width: 100%;
+    max-width: 775px;
+    display: block;
+    box-sizing: border-box;
+    padding-left: 85px;
+  }
 }
 
 .project-item__title {
@@ -8,23 +21,63 @@
   color: #1e1e1e;
   font-size: 30px;
   font-weight: 700;
+  line-height: 1;
+}
+
+.project-item__title-row {
+  display: block;
 }
 
 .project-item__image-container {
-  max-width: 690px;
+  width: 100%;
   padding-top: 70%;
+  margin-bottom: 20px;
+  order: 1;
+  @media (min-width: $breakpoint-medium) {
+    margin-bottom: 0;
+  }
 }
 
 .project-item__title-wrapper {
-  position: absolute;
-  top: 45px;
-  left: 0;
-  z-index: 2;
+  position: static;
+  order: 3;
+  @media (min-width: $breakpoint-medium) {
+    position: absolute;
+    top: 45px;
+    left: 0;
+    z-index: 3;
+  }
 }
 
 .project-item__type {
-  position: absolute;
+  position: relative;
   bottom: 0;
-  left: 60px;
+  left: 0;
+  z-index: 2;
+  order: 2;
+  padding-left: 50px;
+  margin-bottom: 10px;
   font-size: 14px;
+  color: #000;
+  &::before {
+    content: '';
+    position: absolute;
+    top: calc(50% - 1px);
+    left: 0;
+    width: 40px;
+    height: 1px;
+    background-color: #000;
+  }
+  @media (min-width: $breakpoint-medium) {
+    position: absolute;
+    bottom: -20px;
+    left: 85px;
+    margin-bottom: 0;
+  }
+  @media (min-width: $breakpoint-xlarge) {
+    bottom: 0;
+    left: 55px;
+    transform: rotate(-90deg);
+    transform-origin: left;
+  }
 }
