--- a/src/scss/blocks/type-item.scss
+++ b/src/scss/blocks/type-item.scss
@@ -4,16 +4,6 @@
   padding: 10px;
   background: url('../img/bg-type-item.jpg') 50% 50% no-repeat;
   background-size: cover;
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 20px;
-    height: 100%;
-    background: #fff;
-    transform: translateX(-50%);
-  }
   &:hover {
     .type-item__btn {
       transform: scaleX(1);
@@ -24,12 +14,24 @@
       transform: translateX(100%);
       transition: transform 0.25s;
     }
-  }
+  } 
   &--left {
     justify-content: flex-start;
   }
   &--right {
     justify-content: flex-end;
+  }
+  @media (min-width: $breakpoint-large) {
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 20px;
+      height: 100%;
+      background: #fff;
+      transform: translateX(-50%);
+    }
   }
 }
 
@@ -37,11 +39,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: calc(50% - 20px);
+  width: 100%;
   min-height: 490px;
   box-sizing: border-box;
   padding: 60px 40px 35px;
   background-color: #fff;
+  @media (min-width: $breakpoint-large) {
+    width: calc(50% - 20px);
+  }
 }
 
 .type-item__title {
