--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,9 +7,8 @@
 @import "blocks/page-wrapper";
 @import "blocks/rubl";
 @import "blocks/intro";
-@import "blocks/section";
-@import "blocks/logo";
-@import "blocks/services";
+@import "blocks/home-section";
+@import "blocks/home-services";
 @import "blocks/service-item";
 @import "blocks/container";
 @import "blocks/main-header";
@@ -28,10 +27,30 @@
 @import "blocks/home-clients";
 @import "blocks/home-contacts";
 @import "blocks/contacts-item";
-@import "blocks/social";
 @import "blocks/to-top";
 @import "blocks/page";
-@import "blocks/main-nav";
+@import "blocks/nav-main";
+@import "blocks/nav-section";
+@import "blocks/innerpage";
+@import "blocks/result-list";
+@import "blocks/service";
+@import "blocks/dashed-list";
+@import "blocks/clients";
+@import "blocks/feedback";
+@import "blocks/main-footer";
+@import "blocks/nav-footer";
+@import "blocks/blog-card";
+@import "blocks/blog";
+@import "blocks/btn-show-more";
+@import "blocks/portfolio";
+@import "blocks/project";
+@import "blocks/paddings";
+@import "blocks/map";
+
+
+
+
+
 
 
 
