--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -72,7 +72,7 @@
       <nav class="nav-section" aria-label="Навигация по разделу">
         <div class="nav-section__wrapper js-nav-section-wrapper">
           <div class="nav-section__title">
-            Блог
+            О нас
           </div>
           <ul class="nav-section__list">
             <li class="nav-section__item">
@@ -104,7 +104,7 @@
         </div>
       </nav>
       <main class="innerpage__content blog">
-        <div class="paddings">
+        <div class="wrapper">
           <a class="innerpage__link-back" href="#" aria-label="Ссылка на предыдущую страницу"></a>
           <h1 class="innerpage__page-title">
             Блог
@@ -369,35 +369,35 @@
           </button>
         </div>
         <section class="clients">
-          <h2 class="innerpage__section-title">
-            Нам доверяют:
-          </h2>
-          <ul class="cients__list">
-            <li class="clients__list-item">
-              <img src="../img/client-1--small.png" alt="">
-            </li>
-            <li class="clients__list-item">
-              <img src="../img/client-2--small.png" alt="">
-            </li>
-            <li class="clients__list-item">
-              <img src="../img/client-3--small.png" alt="">
-            </li>
-            <li class="clients__list-item">
-              <img src="../img/client-4--small.png" alt="">
-            </li>
-            <li class="clients__list-item">
-              <img src="../img/client-5--small.png" alt="">
-            </li>
-            <li class="clients__list-item">
-              <img src="../img/client-6--small.png" alt="">
-            </li>
-            <li class="clients__list-item">
-              <img src="../img/client-7--small.png" alt="">
-            </li>
-            <li class="clients__list-item">
-              <img src="../img/client-8--small.png" alt="">
-            </li>
-          </ul>
+            <h2 class="innerpage__section-title">
+              Нам доверяют:
+            </h2>
+            <ul class="cients__list">
+              <li class="clients__list-item">
+                <img src="../img/client-1--small.png" alt="">
+              </li>
+              <li class="clients__list-item">
+                <img src="../img/client-2--small.png" alt="">
+              </li>
+              <li class="clients__list-item">
+                <img src="../img/client-3--small.png" alt="">
+              </li>
+              <li class="clients__list-item">
+                <img src="../img/client-4--small.png" alt="">
+              </li>
+              <li class="clients__list-item">
+                <img src="../img/client-5--small.png" alt="">
+              </li>
+              <li class="clients__list-item">
+                <img src="../img/client-6--small.png" alt="">
+              </li>
+              <li class="clients__list-item">
+                <img src="../img/client-7--small.png" alt="">
+              </li>
+              <li class="clients__list-item">
+                <img src="../img/client-8--small.png" alt="">
+              </li>
+            </ul>
         </section>
         <section class="feedback">
           <div class="feedback__inner">
@@ -416,7 +416,7 @@
                 <input class="input-text input-text--email" type="email" placeholder="Email" aria-labelledby="Email"
                   required>
               </div>
-              <button class="form-feedback__submit btn btn--wide" type="submit">
+              <button class="form-feedback__submit btn btn--wide btn--feedback" type="submit">
                 <span class="btn__caption">
                   Отправить
                 </span>
