--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -105,7 +105,7 @@
           </div>
         </nav>
         <main class="innerpage__content project">
-          <div class="paddings">
+          <div class="wrapper">
             <a class="innerpage__link-back" href="#" aria-label="Ссылка на предыдущую страницу"></a>
             <a class="project__work-link" href="#">
               dombitcom.com
@@ -148,7 +148,7 @@
             <img class="project__intro-2" src="../img/intro-project-2.jpg" alt="">
           </div>
           <section class="project__adaptive">
-            <div class="paddings">
+            <div class="wrapper">
               <h2 class="innerpage__section-title">
                 Адаптив
               </h2>
@@ -170,7 +170,7 @@
             </div>
           </section>
           <section class="project__innerpages">
-            <div class="paddings">
+            <div class="wrapper">
               <h2 class="project__section-title">
                 Внутренние страницы
               </h2>
@@ -186,7 +186,7 @@
             </div>
           </section>
           <section class="project__addpages">
-            <div class="paddings">
+            <div class="wrapper">
               <h2 class="project__section-title">
                 Дополнительные страницы
               </h2>
@@ -200,7 +200,7 @@
             </div>
           </section>
           <section class="project__more">
-            <div class="paddings">
+            <div class="wrapper">
               <h2 class="project__more-title">
                 Посмотрите другие работы:
               </h2>
