--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -104,7 +104,7 @@
         </div>
       </nav>
       <main class="innerpage__content service">
-        <div class="paddings">
+        <div class="wrapper">
           <a class="innerpage__link-back" href="#" aria-label="Ссылка на предыдущую страницу"></a>
           <h1 class="innerpage__page-title">
             Разработка сайтов «под ключ»
