--- a/src/scss/blocks/blog-card.scss
+++ b/src/scss/blocks/blog-card.scss
@@ -1,9 +1,6 @@
 .blog-card {
   @include reset-link;
   display: block;
-  &--type-1 {
-
-  }
   &--type-2 {
     .blog-card__image-wrapper {
       padding-top: 60%;
@@ -22,16 +19,17 @@
 
 .blog-card__content {
   display: block;
-  padding: 50px 30px 20px;
+  padding: 45px 38px 20px;
   background-color: #efefef;
 }
 
 .blog-card__title {
   display: block;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   color: #1e1e1e;
   font-size: 24px;
   font-weight: 700;
+  line-height: 1.2;
 }
 
 .blog-card__desc {
@@ -39,11 +37,12 @@
   margin-bottom: 65px;
   color: #4f4f4f;
   font-size: 15px;
+  line-height: 1.2;
 }
 
 .blog-card__footer {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: flex-end;
   margin: 0 -15px;
 }
