--- a/src/scss/blocks/home-feedback.scss
+++ b/src/scss/blocks/home-feedback.scss
@@ -27,6 +27,6 @@
   padding: 90px 0;
   box-sizing: border-box;
   @media (min-width: $breakpoint-small) {
-    padding: 100px 0;
+    padding: 310px 0 250px;
   }
 }
