--- a/src/scss/blocks/innerpage.scss
+++ b/src/scss/blocks/innerpage.scss
@@ -19,7 +19,7 @@
     padding-top: 75px;
   }
   @media (min-width: $breakpoint-medium) {
-    padding-top: 125px;
+    padding-top: 60px;
   }
 }
 
@@ -27,7 +27,7 @@
   display: block;
   width: 55px;
   height: 30px;
-  margin-bottom: 60px;
+  margin-bottom: 55px;
   position: relative;
   &::before {
     content: '';
@@ -58,12 +58,10 @@
       transform: translateY(-50%) scaleX(2.4);
     }
   }
-  @media (min-width: $breakpoint-medium) {
-    margin-bottom: 80px;
-  }
 }
 
 .innerpage__page-title {
+  margin: 0 0 25px;
   color: #1c1b1b;
   font-size: 40px;
   font-weight: 700;
@@ -74,7 +72,7 @@
 
 .innerpage__intro {
   max-width: 580px;
-  margin-bottom: 120px;
+  margin-bottom: 135px;
   line-height: 1.2;
 }
 
