--- a/src/scss/blocks/nav-main.scss
+++ b/src/scss/blocks/nav-main.scss
@@ -5,14 +5,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 981;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   padding: 190px 0 100px;
   overflow-y: scroll;
   background-color: #1e1e1e;
-  &.active {
+  &.opened-menu {
     display: flex;
   }
 }
