--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,12 +9,12 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="js-homepage"> 
   <div class="page-wrapper">
     <div class="container">
       <header class="main-header">
-        <a class="main-header__logo">
-          <svg width="180" height="50" fill="#fff" viewBox="0 0 936 316">
+        <a class="logo logo--light logo--opened js-logo">
+          <svg viewBox="0 0 936 316">
             <path d="M136.9,198.3c-3.2,1.7-7.1,0.6-8.8-2.6l-36.6-68.2c-1.7-3.2-0.6-7.1,2.6-8.8c3.2-1.7,7.1-0.6,8.8,2.6l36.6,68.2
                               C141.2,192.6,140.1,196.6,136.9,198.3L136.9,198.3z M101.5,127.5l-36.6,68.2c-1.7,3.2-5.7,4.3-8.8,2.6c-3.2-1.7-4.3-5.7-2.6-8.8
                               l36.6-68.2c1.2-2.2,3.5-3.5,5.9-3.4c0.1,0,0.5,0,0.5,0c0.1,0,0.6,0,0.7,0c0.8,0.1,1,0.4,1.7,0.8
@@ -33,8 +33,8 @@
           </svg>
         </a>
         <button class="btn-menu btn-menu--homepage js-menu-toggler"
-          data-uk-toggle="target: .js-menu-main, .js-menu-toggler; cls: active" type="button"></button>
-        <nav class="nav-main js-menu-main">
+          data-uk-toggle="target: .js-menu, .js-menu-toggler, .js-contacts-toggler, .js-contacts-block, .js-logo; cls: opened-menu" type="button"></button>
+        <nav class="nav-main js-menu">
           <ul class="nav-main__list">
             <li class="nav-main__item">
               <a class="nav-main__link" href="#">
@@ -68,54 +68,58 @@
             </li>
           </ul>
         </nav>
-        <div class="main-header__contacts">
-          <a class="main-header__tel" href="tel:74732406226">
-            <svg class="main-header__tel-icon">
+        <div class="contacts-block contacts-block--opened js-contacts-block">
+          <a class="contacts-block__tel" href="tel:74732406226">
+            <svg class="contacts-block__tel-icon">
               <use xlink:href="../img/sprite.svg#phone" />
             </svg>
-            <span class="main-header__tel-text">+7 473 240-6226</span>
+            <span class="contacts-block__tel-text">+7 473 240-6226</span>
           </a>
-          <ul class="main-header__social-list">
-            <li class="main-header__social-item">
-              <a class="main-header__social-link" href="#" target="_blank">
-                <svg class="main-header__social-icon" width="15" height="8">
+          <ul class="contacts-block__social-list">
+            <li class="contacts-block__social-item">
+              <a class="contacts-block__social-link" href="#" target="_blank">
+                <svg class="contacts-block__social-icon" width="15" height="8">
                   <use xlink:href="../img/sprite.svg#vk" />
                 </svg>
               </a>
             </li>
-            <li class="main-header__social-item">
-              <a class="main-header__social-link" href="#" target="_blank">
-                <svg class="main-header__social-icon" width="12" height="12">
+            <li class="contacts-block__social-item">
+              <a class="contacts-block__social-link" href="#" target="_blank">
+                <svg class="contacts-block__social-icon" width="12" height="12">
                   <use xlink:href="../img/sprite.svg#in" />
                 </svg>
               </a>
             </li>
-            <li class="main-header__social-item">
-              <a class="main-header__social-link" href="#" target="_blank">
-                <svg class="main-header__social-icon" width="8" height="15">
+            <li class="contacts-block__social-item">
+              <a class="contacts-block__social-link" href="#" target="_blank">
+                <svg class="contacts-block__social-icon" width="8" height="15">
                   <use xlink:href="../img/sprite.svg#fb" />
                 </svg>
               </a>
             </li>
           </ul>
         </div>
+        <button class="btn-contacts js-contacts-toggler" data-uk-toggle="target: .js-contacts-toggler, .js-contacts-block; cls: opened-contacts" type="button">
+          <svg class="btn-contacts__phone">
+            <use xlink:href="../img/sprite.svg#phone" />
+          </svg>
+          <svg class="btn-contacts__close">
+            <use xlink:href="../img/sprite.svg#close" />
+          </svg>
+        </button>
       </header>
       <main class="page">
         <section class="intro home-section">
           <h1 class="intro__title">
-            Разработка
-            и продвижение сайтов
+            <img class="intro__title-image" src="../img/mask-title.svg" alt="Разработка и продвижение сайтов">
+            <span class="intro__title-text">Разработка и продвижение сайтов</span>
           </h1>
-          <div class="intro__leftside home-section__leftside">
-            <div class="intro__slogan vertical-text vertical-text--light vertical-text--long-dash">
-              Привлекаем клиентов<br>
-              и увеличиваем продажи!
-            </div>
-          </div>
-          <div class="intro__rightside home-section__rightside">
+          <div class="intro__slogan vertical-text">
+            Привлекаем клиентов<br>
+            и увеличиваем продажи!
           </div>
         </section>
-        <section class="home-services home-section">
+        <section class="home-services home-section js-home-services">
           <div class="home-section__leftside">
             <div class="home-services__title-wrapper home-section__title-wrapper" data-uk-sticky="bottom: true">
               <h2 class="home-services__title home-section__title">
@@ -211,9 +215,9 @@
                         Landing Page
                       </h3>
                       <ul class="type-item__list custom-list">
-                        <li>Базовый дизайн</li>
-                        <li>Уникальный дизайн</li>
-                        <li>Индивидуальный подход</li>
+                        <li class="type-item__list-item">Базовый дизайн</li>
+                        <li class="type-item__list-item">Уникальный дизайн</li>
+                        <li class="type-item__list-item">Индивидуальный подход</li>
                       </ul>
                     </div>
                     <div class="type-item__bottom">
@@ -270,11 +274,12 @@
           </div>
           <div class="home-portfolio__rightside home-section__rightside">
             <ul class="home-portfolio__list">
-              <li>
+              <li class="home-portfolio__list-item">
                 <div class="project-item">
                   <div class="project-item__title-wrapper">
                     <h3 class="project-item__title">
-                      Посуда для баров <br> и ресторанов
+                      <span class="project-item__title-row">Посуда для баров</span> 
+                      <span class="project-item__title-row">и ресторанов</span>
                     </h3>
                     <a class="project-item__link btn" href="#" style="background-color: #394289">
                       <span class="btn__caption">Смотреть проект →</span>
@@ -288,6 +293,44 @@
                   </div>
                 </div>
               </li>
+              <li class="home-portfolio__list-item">
+                  <div class="project-item">
+                    <div class="project-item__title-wrapper">
+                      <h3 class="project-item__title">
+                        <span class="project-item__title-row">Посуда для баров</span> 
+                        <span class="project-item__title-row">и ресторанов</span>
+                      </h3>
+                      <a class="project-item__link btn" href="#" style="background-color: #394289">
+                        <span class="btn__caption">Смотреть проект →</span>
+                      </a>
+                    </div>
+                    <div class="project-item__type">
+                      Интернет-магазин
+                    </div>
+                    <div class="project-item__image-container uk-cover-container">
+                      <img data-uk-cover src="../img/bg-project-item.jpg" alt="">
+                    </div>
+                  </div>
+                </li>
+                <li class="home-portfolio__list-item">
+                    <div class="project-item">
+                      <div class="project-item__title-wrapper">
+                        <h3 class="project-item__title">
+                          <span class="project-item__title-row">Посуда для баров</span> 
+                          <span class="project-item__title-row">и ресторанов</span>
+                        </h3>
+                        <a class="project-item__link btn" href="#" style="background-color: #394289">
+                          <span class="btn__caption">Смотреть проект →</span>
+                        </a>
+                      </div>
+                      <div class="project-item__type">
+                        Интернет-магазин
+                      </div>
+                      <div class="project-item__image-container uk-cover-container">
+                        <img data-uk-cover src="../img/bg-project-item.jpg" alt="">
+                      </div>
+                    </div>
+                  </li>
             </ul>
             <a class="home-portfolio__view-all" href="#">
               <span class="home-portfolio__view-all-text">
@@ -323,7 +366,7 @@
                   <input class="input-text input-text--email" type="email" placeholder="Email" aria-labelledby="Email"
                     required>
                 </div>
-                <button class="form-feedback__submit btn btn--wide" type="submit">
+                <button class="form-feedback__submit btn btn--wide btn--feedback" type="submit">
                   <span class="btn__caption">
                     Отправить
                   </span>
@@ -338,7 +381,7 @@
             </div>
           </div>
         </section>
-        <section class="home-clients home-section">
+        <section class="home-clients home-section js-home-clients">
           <div class="home-feedback__leftside home-section__leftside">
             <div class="home-clients__title-wrapper home-section__title-wrapper" data-uk-sticky="bottom: true">
               <h2 class="home-clients__title home-section__title">
