--- a/src/templates/portfolio.html
+++ b/src/templates/portfolio.html
@@ -104,7 +104,7 @@
         </div>
       </nav>
       <main class="innerpage__content portfolio">
-        <div class="paddings">
+        <div class="wrapper">
           <a class="innerpage__link-back" href="#" aria-label="Ссылка на предыдущую страницу"></a>
           <h1 class="innerpage__page-title">
             С 2004 года мы реализовали
@@ -115,7 +115,7 @@
             сайта, сферы вашей деятельности и качества создаваемого проекта.
           </div>
           <ul class="portfolio__list">
-            <li>
+            <li class="portfolio__list-item">
               <div class="project-item">
                 <div class="project-item__title-wrapper">
                   <h3 class="project-item__title">
@@ -134,7 +134,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li class="portfolio__list-item">
               <div class="project-item">
                 <div class="project-item__title-wrapper">
                   <h3 class="project-item__title">
@@ -153,7 +153,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li class="portfolio__list-item">
               <div class="project-item">
                 <div class="project-item__title-wrapper">
                   <h3 class="project-item__title">
@@ -172,7 +172,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li class="portfolio__list-item">
               <div class="project-item">
                 <div class="project-item__title-wrapper">
                   <h3 class="project-item__title">
@@ -191,7 +191,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li class="portfolio__list-item">
                 <div class="project-item">
                   <div class="project-item__title-wrapper">
                     <h3 class="project-item__title">
@@ -210,7 +210,7 @@
                   </div>
                 </div>
               </li>
-              <li>
+              <li class="portfolio__list-item">
                   <div class="project-item">
                     <div class="project-item__title-wrapper">
                       <h3 class="project-item__title">
