--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -33,7 +33,8 @@
           </svg>
         </a>
         <button class="btn-menu btn-menu--homepage js-menu-toggler"
-          data-uk-toggle="target: .js-menu, .js-menu-toggler, .js-contacts-toggler, .js-contacts-block, .js-logo; cls: opened-menu" type="button"></button>
+           type="button"></button>
+           <!-- data-uk-toggle="target: .js-menu, .js-menu-toggler, .js-contacts-block, .js-logo; cls: opened-menu" -->
         <nav class="nav-main js-menu">
           <ul class="nav-main__list">
             <li class="nav-main__item">
