--- a/src/scss/blocks/home-services.scss
+++ b/src/scss/blocks/home-services.scss
@@ -5,3 +5,7 @@
 .home-services__list {
   @include reset-list;
 }
+
+.home-services__list-item:last-of-type .service-item__border {
+  display: none;
+}
