--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,7 +33,7 @@
 @import "blocks/nav-section";
 @import "blocks/innerpage";
 @import "blocks/result-list";
-@import "blocks/service";
+@import "blocks/services";
 @import "blocks/dashed-list";
 @import "blocks/clients";
 @import "blocks/feedback";
