--- a/src/scss/blocks/service-item.scss
+++ b/src/scss/blocks/service-item.scss
@@ -1,5 +1,6 @@
 .service-item {
   @include reset-link;
+  position: relative;
   display: block;
   padding: 47px 65px 96px;
   border-top: 10px solid transparent;
@@ -50,6 +51,15 @@
 .service-item__link {
   display: flex;
   align-items: center;
+}
+
+.service-item__border {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #cfcfcf;
 }
 
 .service-item__arrow {
