--- a/src/scss/blocks/type-item.scss
+++ b/src/scss/blocks/type-item.scss
@@ -2,8 +2,7 @@
   position: relative;
   display: flex;
   padding: 10px;
-  background: url('../img/bg-type-item.jpg') 50% 50% no-repeat;
-  background-size: cover;
+  overflow: hidden;
   &:hover {
     .type-item__btn {
       transform: scaleX(1);
@@ -27,6 +26,7 @@
       position: absolute;
       top: 0;
       left: 50%;
+      z-index: 2;
       width: 20px;
       height: 100%;
       background: #fff;
@@ -36,6 +36,8 @@
 }
 
 .type-item__content {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -44,12 +46,22 @@
   box-sizing: border-box;
   padding: 50px 20px 35px;
   background-color: #fff;
+  overflow: hidden;
   @media (min-width: $breakpoint-small) {
     padding: 50px 40px 35px;
   }
   @media (min-width: $breakpoint-large) {
     width: calc(50% - 20px);
   }
+}
+
+.type-item__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
 
 .type-item__title {
