--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -9,64 +9,102 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="js-services">
   <div class="page-wrapper">
     <header class="main-header">
-      <a class="main-header__logo main-header__logo--innerpage" href="#">
-          <svg width="180" height="50" fill="#fff" viewBox="0 0 936 316">
-            <path d="M136.9,198.3c-3.2,1.7-7.1,0.6-8.8-2.6l-36.6-68.2c-1.7-3.2-0.6-7.1,2.6-8.8c3.2-1.7,7.1-0.6,8.8,2.6l36.6,68.2
-                              C141.2,192.6,140.1,196.6,136.9,198.3L136.9,198.3z M101.5,127.5l-36.6,68.2c-1.7,3.2-5.7,4.3-8.8,2.6c-3.2-1.7-4.3-5.7-2.6-8.8
-                              l36.6-68.2c1.2-2.2,3.5-3.5,5.9-3.4c0.1,0,0.5,0,0.5,0c0.1,0,0.6,0,0.7,0c0.8,0.1,1,0.4,1.7,0.8
-                              C102.1,120.4,103.2,124.4,101.5,127.5z" />
-            <path d="M209.5,127.5l-36.6,68.2c-1.7,3.2-5.7,4.3-8.8,2.6c-3.2-1.7-4.3-5.7-2.6-8.8l36.6-68.2c1.7-3.2,5.7-4.3,8.8-2.6
-                              C210.1,120.4,211.2,124.4,209.5,127.5L209.5,127.5z M168.9,198.3c-3.2,1.7-7.1,0.6-8.8-2.6l-36.6-68.2c-1.7-3.2-0.6-7.1,2.6-8.8
-                              c3.2-1.7,7.1-0.6,8.8,2.6l36.6,68.2C173.2,192.6,172.1,196.6,168.9,198.3L168.9,198.3z" />
-            <path d="M240,128c0,0-12-1.2-12,9c0,8,5.7,10,14,13s15,4.3,20,13c4.2,7.4,4.3,21.1-6,29c-10.7,8.2-26.3,6.8-37,2c-4.5-2-4.2-7.3-3-9
-                              s5.8-2.3,10,0s9.7,2.9,14,2c5.3-1.1,12.8-3.2,13-11s-2-10.5-12-14c-9-3.2-25.8-7.8-25-26c0.3-7.4,5.2-13,10.1-15.4
-                              c7-3.5,13-3.8,17.9-2.6c3.8,1,17.3,5.7,14,12C253.6,138.5,245.8,128,240,128L240,128z" />
-            <path d="M305,305V11H11v294H305 M316,316H0V0h316V316L316,316L316,316z" />
-            <text class="main-header__logo__text" style="font-family: 'Geometria', sans-serif;
-                            font-size: 120px; fill: #fff;" x="400" y="130">AVSWEB</text>
-            <text class="main-header__logo__text" style="font-family: 'Geometria', sans-serif;
-                            font-size: 80px; fill: #fff;" x="400" y="270">веб-студия</text>
-          </svg>
+      <a class="logo logo--light js-logo">
+        <svg viewBox="0 0 936 316">
+          <path d="M136.9,198.3c-3.2,1.7-7.1,0.6-8.8-2.6l-36.6-68.2c-1.7-3.2-0.6-7.1,2.6-8.8c3.2-1.7,7.1-0.6,8.8,2.6l36.6,68.2
+                                C141.2,192.6,140.1,196.6,136.9,198.3L136.9,198.3z M101.5,127.5l-36.6,68.2c-1.7,3.2-5.7,4.3-8.8,2.6c-3.2-1.7-4.3-5.7-2.6-8.8
+                                l36.6-68.2c1.2-2.2,3.5-3.5,5.9-3.4c0.1,0,0.5,0,0.5,0c0.1,0,0.6,0,0.7,0c0.8,0.1,1,0.4,1.7,0.8
+                                C102.1,120.4,103.2,124.4,101.5,127.5z" />
+          <path d="M209.5,127.5l-36.6,68.2c-1.7,3.2-5.7,4.3-8.8,2.6c-3.2-1.7-4.3-5.7-2.6-8.8l36.6-68.2c1.7-3.2,5.7-4.3,8.8-2.6
+                                C210.1,120.4,211.2,124.4,209.5,127.5L209.5,127.5z M168.9,198.3c-3.2,1.7-7.1,0.6-8.8-2.6l-36.6-68.2c-1.7-3.2-0.6-7.1,2.6-8.8
+                                c3.2-1.7,7.1-0.6,8.8,2.6l36.6,68.2C173.2,192.6,172.1,196.6,168.9,198.3L168.9,198.3z" />
+          <path d="M240,128c0,0-12-1.2-12,9c0,8,5.7,10,14,13s15,4.3,20,13c4.2,7.4,4.3,21.1-6,29c-10.7,8.2-26.3,6.8-37,2c-4.5-2-4.2-7.3-3-9
+                                s5.8-2.3,10,0s9.7,2.9,14,2c5.3-1.1,12.8-3.2,13-11s-2-10.5-12-14c-9-3.2-25.8-7.8-25-26c0.3-7.4,5.2-13,10.1-15.4
+                                c7-3.5,13-3.8,17.9-2.6c3.8,1,17.3,5.7,14,12C253.6,138.5,245.8,128,240,128L240,128z" />
+          <path d="M305,305V11H11v294H305 M316,316H0V0h316V316L316,316L316,316z" />
+          <text class="logo__text" style="font-family: 'Geometria', sans-serif;
+                              font-size: 120px; fill: #fff;" x="400" y="130">AVSWEB</text>
+          <text class="logo__text" style="font-family: 'Geometria', sans-serif;
+                              font-size: 80px; fill: #fff;" x="400" y="270">веб-студия</text>
+        </svg>
       </a>
-      <button class="main-header__btn-menu btn-menu btn-menu--innerpage js-menu-toggler"
-        data-uk-toggle="target: .js-menu-main, .js-menu-toggler; cls: active" type="button"></button>
-      <nav class="nav-main js-menu-main">
-        <ul class="nav-main__list" data-uk-nav>
-          <li class="nav-main__item">
+      <button class="btn-menu btn-menu--innerpage js-menu-toggler" type="button"></button>
+      <nav class="nav-main js-menu">
+        <ul class="nav-main__list js-nav-list">
+          <li class="nav-main__item js-nav-item">
             <a class="nav-main__link" href="#">
-              <span class="nav-main__link-text">О нас</span>
+              О нас
             </a>
           </li>
-          <li class="nav-main__item">
+          <li class="nav-main__item js-nav-item">
             <a class="nav-main__link active" href="#">
-              <span class="nav-main__link-text">Услуги</span>
+              Услуги
             </a>
           </li>
-          <li class="nav-main__item">
+          <li class="nav-main__item js-nav-item">
             <a class="nav-main__link" href="#">
-              <span class="nav-main__link-text">Типы сайтов</span>
+              Типы сайтов
             </a>
           </li>
-          <li class="nav-main__item">
+          <li class="nav-main__item js-nav-item">
             <a class="nav-main__link" href="#">
-              <span class="nav-main__link-text">Портфолио</span>
+              Портфолио
             </a>
           </li>
-          <li class="nav-main__item">
+          <li class="nav-main__item js-nav-item">
             <a class="nav-main__link" href="#">
-              <span class="nav-main__link-text">Клиенты</span>
+              Клиенты
             </a>
           </li>
-          <li class="nav-main__item">
+          <li class="nav-main__item js-nav-item">
             <a class="nav-main__link" href="#">
-              <span class="nav-main__link-text">Контакты</span>
+              Контакты
             </a>
           </li>
         </ul>
       </nav>
+      <div class="contacts-block js-contacts-block">
+        <a class="contacts-block__tel js-contacts-tel" href="tel:74732406226">
+          <svg class="contacts-block__tel-icon">
+            <use xlink:href="../img/sprite.svg#phone" />
+          </svg>
+          <span class="contacts-block__tel-text">+7 473 240-6226</span>
+        </a>
+        <ul class="contacts-block__social-list js-social-list">
+          <li class="contacts-block__social-item js-social-item">
+            <a class="contacts-block__social-link" href="#" target="_blank">
+              <svg class="contacts-block__social-icon" width="15" height="8">
+                <use xlink:href="../img/sprite.svg#vk" />
+              </svg>
+            </a>
+          </li>
+          <li class="contacts-block__social-item js-social-item">
+            <a class="contacts-block__social-link" href="#" target="_blank">
+              <svg class="contacts-block__social-icon" width="12" height="12">
+                <use xlink:href="../img/sprite.svg#in" />
+              </svg>
+            </a>
+          </li>
+          <li class="contacts-block__social-item js-social-item">
+            <a class="contacts-block__social-link" href="#" target="_blank">
+              <svg class="contacts-block__social-icon" width="8" height="15">
+                <use xlink:href="../img/sprite.svg#fb" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <button class="btn-contacts js-contacts-toggler" type="button">
+        <svg class="btn-contacts__phone">
+          <use xlink:href="../img/sprite.svg#phone" />
+        </svg>
+        <svg class="btn-contacts__close">
+          <use xlink:href="../img/sprite.svg#close" />
+        </svg>
+      </button>
     </header>
     <div class="innerpage">
       <nav class="nav-section" aria-label="Навигация по разделу">
@@ -103,7 +141,7 @@
           </ul>
         </div>
       </nav>
-      <main class="innerpage__content service">
+      <main class="innerpage__content services">
         <div class="wrapper">
           <a class="innerpage__link-back" href="#" aria-label="Ссылка на предыдущую страницу"></a>
           <h1 class="innerpage__page-title">
@@ -113,10 +151,10 @@
             Как вы, вероятно, уже знаете — стоимость каждого сайта рассчитывается индивидуально, в зависимости от типа
             сайта, сферы вашей деятельности и качества создаваемого проекта.
           </div>
-          <section class="service__result-section">
+          <section class="services__result-section js-services-result">
             <h2 class="innerpage__section-title">Что вы получите в итоге</h2>
             <ul class="result-list">
-              <li class="result-list__item">
+              <li class="result-list__item js-result-item">
                 <h3 class="result-list__item-title">
                   Эффективный сайт
                 </h3>
@@ -124,7 +162,7 @@
                   Привлекающий на свои страницы ваших потенциальных клиентов
                 </div>
               </li>
-              <li class="result-list__item">
+              <li class="result-list__item js-result-item">
                 <h3 class="result-list__item-title">
                   Эффективный сайт
                 </h3>
@@ -132,7 +170,7 @@
                   Привлекающий на свои страницы ваших потенциальных клиентов
                 </div>
               </li>
-              <li class="result-list__item">
+              <li class="result-list__item js-result-item">
                 <h3 class="result-list__item-title">
                   Эффективный сайт
                 </h3>
@@ -140,7 +178,7 @@
                   Привлекающий на свои страницы ваших потенциальных клиентов
                 </div>
               </li>
-              <li class="result-list__item">
+              <li class="result-list__item js-result-item">
                 <h3 class="result-list__item-title">
                   Эффективный сайт
                 </h3>
@@ -148,7 +186,7 @@
                   Привлекающий на свои страницы ваших потенциальных клиентов
                 </div>
               </li>
-              <li class="result-list__item">
+              <li class="result-list__item js-result-item">
                 <h3 class="result-list__item-title">
                   Эффективный сайт
                 </h3>
@@ -156,7 +194,7 @@
                   Привлекающий на свои страницы ваших потенциальных клиентов
                 </div>
               </li>
-              <li class="result-list__item">
+              <li class="result-list__item js-result-item">
                 <h3 class="result-list__item-title">
                   Эффективный сайт
                 </h3>
@@ -164,7 +202,7 @@
                   Привлекающий на свои страницы ваших потенциальных клиентов
                 </div>
               </li>
-              <li class="result-list__item">
+              <li class="result-list__item js-result-item">
                 <h3 class="result-list__item-title">
                   Эффективный сайт
                 </h3>
@@ -174,35 +212,37 @@
               </li>
             </ul>
           </section>
-          <section class="service__price-section">
-            <h2 class="innerpage__section-title">Cтоимость разработки сайта</h2>
-            <div class="service__price-text">
+          <section class="services__price-section js-services-price">
+            <h2 class="innerpage__section-title js-services-price-title">Cтоимость разработки сайта</h2>
+            <div class="services__price-text js-services-price-text">
               Как вы, вероятно, уже знаете — стоимость каждого сайта рассчитывается индивидуально, в зависимости от типа
               сайта, сферы вашей деятельности и качества создаваемого проекта.
             </div>
           </section>
-          <section class="service__work-section">
-            <div class="service__work-image-container">
-              <img src="../img/work.jpg" alt="">
+          <section class="services__work-section js-services-work">
+            <div class="services__work-border js-services-work-border"></div>
+            <div class="services__work-image-container uk-cover-container">
+              <img data-uk-cover src="../img/work.jpg" alt="">
+              <div class="services__work-image-decor js-services-img-decor"></div>
             </div>
-            <div class="">
-              <h2 class="innerpage__section-title">
+            <div>
+              <h2 class="innerpage__section-title js-services-work-title">
                 В стоимость включены
                 следующие работы:
               </h2>
               <ul class="dashed-list">
-                <li>Индивидуальный дизайн</li>
-                <li>Подключение системы управления контентом (CMS)</li>
-                <li>Подключение и настройка программных модулей</li>
-                <li>Наполнение сайта материалами заказчика</li>
-                <li>Загрузка сайта на хостинг</li>
-                <li>Регистрация сайта в системах статистики</li>
-                <li>Регистрация сайта в основных поисковых системах</li>
+                <li class="js-services-work-item">Индивидуальный дизайн</li>
+                <li class="js-services-work-item">Подключение системы управления контентом (CMS)</li>
+                <li class="js-services-work-item">Подключение и настройка программных модулей</li>
+                <li class="js-services-work-item">Наполнение сайта материалами заказчика</li>
+                <li class="js-services-work-item">Загрузка сайта на хостинг</li>
+                <li class="js-services-work-item">Регистрация сайта в системах статистики</li>
+                <li class="js-services-work-item">Регистрация сайта в основных поисковых системах</li>
               </ul>
             </div>
           </section>
         </div>
-        <section class="service__clients-section clients">
+        <section class="services__clients-section clients">
           <h2 class="innerpage__section-title">
             Нам доверяют:
           </h2>
@@ -237,11 +277,10 @@
           <div class="feedback__inner">
             <form class="form-feedback">
               <h2 class="form-feedback__title">
-                  Хотите с нами работать?
+                Хотите с нами работать?
               </h2>
               <div class="form-feedback__row">
-                <input class="input-text input-text--name" type="text" placeholder="Имя" aria-labelledby="Имя"
-                  required>
+                <input class="input-text input-text--name" type="text" placeholder="Имя" aria-labelledby="Имя" required>
               </div>
               <div class="form-feedback__row">
                 <input class="input-text input-text--tel" type="tel" placeholder="Телефон" aria-labelledby="Телефон"
