--- a/src/scss/utilities/fonts.scss
+++ b/src/scss/utilities/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "ALSRubl";
-  src: url("../fonts/ALSRubl.woff");
+  src: url("../fonts/ALSRubl.woff") format('woff');
   font-weight: 700;
   font-style: italic;
 }
