--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,11 +47,5 @@
 @import "blocks/wrapper";
 @import "blocks/map";
 @import "blocks/logo";
-@import "blocks/btn-contacts"; 
-
-
-
-
-
-
-
+@import "blocks/btn-contacts";
+@import "blocks/page-404";
