--- a/src/scss/utilities/presets.scss
+++ b/src/scss/utilities/presets.scss
@@ -2,15 +2,29 @@
   outline-color: #6d2cc1;
 }
 
-html, body {
+html,
+body {
   line-height: 1;
 }
 
-input, textarea, select, button {
+input,
+textarea,
+select,
+button {
   appearance: none;
   font-family: inherit;
 }
 
 button {
   cursor: pointer;
+}
+
+form.is-checked {
+  input,
+  textarea {
+    &:invalid {
+      box-shadow: none;
+      border-bottom-color: #ff0f3c;
+    }
+  }
 }
