--- a/src/scss/utilities/animations.scss
+++ b/src/scss/utilities/animations.scss
@@ -3,3 +3,107 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes move-cube {
+  0% {
+    transform: translateX(0) translateY(0) rotate(0) scale(1);
+    opacity: 1;
+  }
+  /* RIGHT */
+  10% {
+    transform: translateX(100%) translateY(0) rotate(100deg) scale(1);
+    opacity: 1;
+  }
+  13% {
+    transform: translateX(100%) translateY(0) rotate(90deg) scale(1);
+    opacity: 1;
+  }
+  20% {
+    transform: translateX(100%) translateY(0) rotate(90deg) scale(1);
+    opacity: 1;
+  }
+  /* BOTTOM */
+  30% {
+    transform: translateX(0) translateY(calc(100% * 0.6)) rotate(-10deg)
+      scale(0.3);
+    opacity: 0;
+  }
+  40% {
+    transform: translateX(0) translateY(calc(100% * 0.6)) rotate(0) scale(0.3);
+    opacity: 0;
+  }
+  /* TOP */
+  50% {
+    transform: translateX(calc(-100% * 0.3)) translateY(calc(-100% * 1.7))
+      rotate(150deg) scale(1.2);
+    opacity: 0.3;
+  }
+  55% {
+    transform: translateX(calc(-100% * 0.5)) translateY(calc(-100% * 2))
+      rotate(220deg) scale(1.2);
+    opacity: 0.5;
+  }
+  60% {
+    transform: translateX(calc(-100% * 0.75)) translateY(calc(-100% * 1.7))
+      rotate(270deg) scale(1.2);
+    opacity: 0.8;
+  }
+  /* LEFT */
+  70% {
+    transform: translateX(-100%) translateY(0) rotate(360deg) scale(1);
+    opacity: 1;
+  }
+  73% {
+    transform: translateX(-100%) translateY(calc(3rem * 0.1)) rotate(360deg)
+      scaleX(1.2) scaleY(0.8);
+    opacity: 1;
+  }
+  76% {
+    transform: translateX(-100%) translateY(0) rotate(360deg) scale(1);
+    opacity: 1;
+  }
+  80% {
+    transform: translateX(-100%) translateY(0) rotate(360deg) scale(1);
+    opacity: 1;
+  }
+  /* CENTER */
+  90% {
+    transform: translateX(0) translateY(0) rotate(460deg) scale(1);
+    opacity: 1;
+  }
+  93% {
+    transform: translateX(0) translateY(0) rotate(450deg) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0) translateY(0) rotate(450deg) scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes change-background {
+  0% {
+    background: #dbf2ff;
+  }
+  50% {
+    background: #672aa0;
+  }
+  100% {
+    background: #dbf2ff;
+  }
+}
+
+@keyframes preloader-side-out {
+  50% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(-50%) translateY(-100%);
+  }
+}
+
+@keyframes preloader-out {
+  100% {
+    transform: translateY(-100%);
+  }
+}
