--- a/src/scss/blocks/contacts-block.scss
+++ b/src/scss/blocks/contacts-block.scss
@@ -1,275 +1,326 @@
 .contacts-block {
-  position: fixed;
-  top: 30px;
-  right: 30px;
-  z-index: 984;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  background: #1e1e1e;
-  &:hover {
-    .contacts-block__tel-icon { 
-      transition: opacity 0.1s;
-      @media (min-width: $breakpoint-small) {
-        opacity: 0;
-      }
-    }
-    .contacts-block__tel-text {
-      transform: translateX(0);
-      opacity: 1;
-      transition: transform 0.25s, opacity 0.1s;
-    }
-    .contacts-block__social-list {
-      &::before {
-        transform: scaleY(1);
-        transform-origin: 50% 0;
-        transition: transform 0.25s;
-      }
-      &::after {
-        transform: scaleY(0);
-        transform-origin: 50% 0;
-        transition: transform 0.25s;
-      }
-    }
-    .contacts-block__social-item { 
-      opacity: 1;
-      transform: translateY(0);
-      @for $i from 1 through 3 {
-        &:nth-child(#{$i}) {
-          transition: transform 0.25s * $i 0.3s, opacity 0.25s * $i 0.3s;
-        }
-      }
-    }
-  }
-  &.opened-contacts {
-    display: flex;
-    top: 0;
-    right: 0;
-  }
-  @media (min-width: $breakpoint-small) {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    width: auto;
-    height: auto;
-    background: transparent;
-    z-index: 982;
-  }
+	position: fixed;
+	top: 30px;
+	right: 30px;
+	z-index: 984;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+	background: #1e1e1e;
+	&:hover {
+		.contacts-block__tel-icon {
+			transition: opacity 0.1s;
+			@media (min-width: $breakpoint-small) {
+				opacity: 0;
+			}
+		}
+		.contacts-block__tel-text {
+			transform: translateX(0);
+			opacity: 1;
+			transition: transform 0.25s, opacity 0.1s;
+		}
+		.contacts-block__social-list {
+			&::before {
+				transform: scaleY(1);
+				transform-origin: 50% 0;
+				transition: transform 0.25s;
+			}
+			&::after {
+				transform: scaleY(0);
+				transform-origin: 50% 0;
+				transition: transform 0.25s;
+			}
+		}
+		.contacts-block__social-item {
+			opacity: 1;
+			transform: translateY(0);
+			@for $i from 1 through 3 {
+				&:nth-child(#{$i}) {
+					transition: transform 0.25s * $i 0.3s,
+						opacity 0.25s * $i 0.3s;
+				}
+			}
+		}
+		.contacts-block__lang-list {
+			opacity: 1;
+			transition: opacity 0.5s 0.5s;
+		}
+	}
+	&.opened-contacts {
+		display: flex;
+		top: 0;
+		right: 0;
+	}
+	@media (min-width: $breakpoint-medium) {
+		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
+		width: auto;
+		height: auto;
+		background: transparent;
+		z-index: 982;
+	}
 }
 
 .contacts-block__tel {
-  @include reset-link;
-  display: flex;
-  align-items: center;
-  margin-bottom: 35px;
-  margin-right: 0;
-  color: #707070;
-  font-size: 18px;
-  overflow: hidden;
-  &:hover {
-    .contacts-block__tel-text { 
-      color: #ea246e;
-    }
-  }
-  @media (min-width: $breakpoint-small) {
-    margin-right: 35px;
-  }
+	@include reset-link;
+	display: flex;
+	align-items: center;
+	margin-bottom: 35px;
+	margin-right: 0;
+	color: #707070;
+	font-size: 18px;
+	overflow: hidden;
+	&:hover {
+		.contacts-block__tel-text {
+			color: #ea246e;
+		}
+	}
+	@media (min-width: $breakpoint-small) {
+		margin-right: 35px;
+	}
 }
 
 .contacts-block__tel-icon {
-  display: none;
-  width: 15px;
-  height: 15px;
-  margin-right: 10px;
-  fill: #fff;
-  opacity: 1;
-  transition: opacity 0.1s;
-  @media (min-width: $breakpoint-small) {
-    display: block;
-    transform: translateX(160px);
-    fill: #707070;
-  }
+	display: none;
+	width: 15px;
+	height: 15px;
+	margin-right: 10px;
+	fill: #fff;
+	opacity: 1;
+	transition: opacity 0.1s;
+	@media (min-width: $breakpoint-small) {
+		display: block;
+		transform: translateX(160px);
+		fill: #707070;
+	}
 }
 
 .contacts-block__tel-text {
-  transform: translateX(160px);
-  opacity: 0;
-  transition: transform 0.25s, opacity 0.1s;
+	transform: translateX(160px);
+	opacity: 0;
+	transition: transform 0.25s, opacity 0.1s;
 }
 
 .contacts-block__social-list {
-  @include reset-list;
-  position: relative;
-  padding-top: 56px;
-  text-align: center;
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: calc(50% - 1px);
-    z-index: 2;
-    width: 1px;
-    height: 36px;
-    background-color: #707070;
-    transform: scaleY(0);
-    transform-origin: 50% 0;
-    transition: transform 0.25s 0.6s;
-    @media (min-width: $breakpoint-small) {
-     
-    }
-  }
-  &::after {
-    content: '';
-    @media (min-width: $breakpoint-small) {
-      position: absolute;
-      top: 0;
-      z-index: 1;
-      left: calc(50% - 1px);
-      width: 2px;
-      height: 14px;
-      background: linear-gradient(to bottom, #707070 0, #707070 2px, transparent 2px, transparent 6px, #707070 6px, #707070 8px, transparent 8px, transparent 12px, #707070 12px, #707070 14px);
-      transform: scaleY(1);
-      transform-origin: 50% 0;
-      transition: transform 0.25s 0.6s;
-    }
-  }
+	@include reset-list;
+	position: relative;
+	padding-top: 56px;
+	text-align: center;
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: calc(50% - 1px);
+		z-index: 2;
+		width: 1px;
+		height: 36px;
+		background-color: #707070;
+		transform: scaleY(0);
+		transform-origin: 50% 0;
+		transition: transform 0.25s 0.6s;
+		@media (min-width: $breakpoint-small) {
+		}
+	}
+	&::after {
+		content: "";
+		@media (min-width: $breakpoint-small) {
+			position: absolute;
+			top: 0;
+			z-index: 1;
+			left: calc(50% - 1px);
+			width: 2px;
+			height: 14px;
+			background: linear-gradient(
+				to bottom,
+				#707070 0,
+				#707070 2px,
+				transparent 2px,
+				transparent 6px,
+				#707070 6px,
+				#707070 8px,
+				transparent 8px,
+				transparent 12px,
+				#707070 12px,
+				#707070 14px
+			);
+			transform: scaleY(1);
+			transform-origin: 50% 0;
+			transition: transform 0.25s 0.6s;
+		}
+	}
 }
 
-.contacts-block__social-item { 
-  margin-bottom: 14px;
-  opacity: 0;
-  transform: translateY(-10px);
-  @for $i from 1 through 3 {
-    &:nth-child(#{$i}) {
-      transition: transform 0.25s * $i 0.3s, opacity 0.25s * $i 0.3s;
-    }
-  }
+.contacts-block__social-item {
+	margin-bottom: 14px;
+	opacity: 0;
+	transform: translateY(-10px);
+	@for $i from 1 through 3 {
+		&:nth-child(#{$i}) {
+			transition: transform 0.25s * $i 0.3s, opacity 0.25s * $i 0.3s;
+		}
+	}
 }
 
 .contacts-block__social-link {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  fill: #fff;
-  &:hover {
-    .contacts-block__social-icon {
-      fill: #ea246e;
-    }
-  }
-  @media (min-width: $breakpoint-medium) {
-    fill: #707070;
-  }
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	fill: #fff;
+	&:hover {
+		.contacts-block__social-icon {
+			fill: #ea246e;
+		}
+	}
+	@media (min-width: $breakpoint-medium) {
+		fill: #707070;
+	}
 }
 
 .contacts-block__social-icon {
-  fill: #fff;
-  @media (min-width: $breakpoint-medium) {
-    fill: #515151;
-  }
+	fill: #fff;
+	@media (min-width: $breakpoint-medium) {
+		fill: #515151;
+	}
 }
 
 .contacts-block--opened {
+	.contacts-block__tel-icon {
+		@media (min-width: $breakpoint-small) {
+			opacity: 0;
+			transition: opacity 0.1s;
+		}
+	}
 
-  .contacts-block__tel-icon {
-    @media (min-width: $breakpoint-small) {
-      opacity: 0;
-      transition: opacity 0.1s;
-    }
-  }
-  
-  .contacts-block__tel-text {
-    transform: translateX(0);
-    opacity: 1;
-    transition: transform 0.25s, opacity 0.1s;
-    color: #fff;
-    @media (min-width: $breakpoint-medium) {
-      color: #707070;
-    }
-  }
+	.contacts-block__tel-text {
+		transform: translateX(0);
+		opacity: 1;
+		transition: transform 0.25s, opacity 0.1s;
+		color: #fff;
+		@media (min-width: $breakpoint-medium) {
+			color: #707070;
+		}
+	}
 
-  .contacts-block__social-list {
-    &::before {
-      transform: scaleY(1);
-      transform-origin: 50% 0;
-      transition: transform 0.25s;
-      background-color: #fff;
-      @media (min-width: $breakpoint-medium) {
-        background-color: #707070;
-      }
-    }
-    &::after {
-      transform: scaleY(0);
-      transform-origin: 50% 0;
-      transition: transform 0.25s;
-    }
-  }
+	.contacts-block__social-list {
+		margin-bottom: 20px;
+		&::before {
+			transform: scaleY(1);
+			transform-origin: 50% 0;
+			transition: transform 0.25s;
+			background-color: #fff;
+			@media (min-width: $breakpoint-medium) {
+				background-color: #707070;
+			}
+		}
+		&::after {
+			transform: scaleY(0);
+			transform-origin: 50% 0;
+			transition: transform 0.25s;
+		}
+	}
 
-  .contacts-block__social-item {
-    opacity: 1;
-    transform: translateY(0);
-    @for $i from 1 through 3 {
-      &:nth-child(#{$i}) {
-        transition: transform 0.25s * $i, opacity 0.25s * $i;
-      }
-    }
-  }
+	.contacts-block__social-item {
+		opacity: 1;
+		transform: translateY(0);
+		@for $i from 1 through 3 {
+			&:nth-child(#{$i}) {
+				transition: transform 0.25s * $i 0.25s * $i,
+					opacity 0.25s * $i 0.25s * $i;
+			}
+		}
+	}
 
+	.contacts-block__lang-list {
+		opacity: 1;
+		transition: opacity 0.5s 1s;
+	}
 }
 
 .contacts-block.opened-menu {
+	.contacts-block__tel-icon {
+		opacity: 0;
+		transition: opacity 0.1s;
+	}
 
-  .contacts-block__tel-icon {
-    opacity: 0;
-    transition: opacity 0.1s;
-  }
+	.contacts-block__tel-text {
+		transform: translateX(0);
+		opacity: 1;
+		transition: transform 0.25s, opacity 0.1s;
+		color: #fff;
+		&:hover {
+			color: #ea246e;
+		}
+	}
 
-  .contacts-block__tel-text {
-    transform: translateX(0);
-    opacity: 1;
-    transition: transform 0.25s, opacity 0.1s;
-    color: #fff;
-    &:hover {
-      color: #ea246e;
-    }
-  }
+	.contacts-block__social-list {
+		&::before {
+			transform: scaleY(1);
+			transform-origin: 50% 0;
+			transition: transform 0.25s;
+			background-color: #fff;
+		}
+		&::after {
+			transform: scaleY(0);
+			transform-origin: 50% 0;
+			transition: transform 0.25s;
+		}
+	}
 
-  .contacts-block__social-list {
-    &::before {
-      transform: scaleY(1);
-      transform-origin: 50% 0;
-      transition: transform 0.25s;
-      background-color: #fff;
-    }
-    &::after {
-      transform: scaleY(0);
-      transform-origin: 50% 0;
-      transition: transform 0.25s;
-    }
-  }
+	.contacts-block__social-item {
+		opacity: 1;
+		transform: translateY(0);
+		@for $i from 1 through 3 {
+			&:nth-child(#{$i}) {
+				transition: transform 0.25s * $i 0.25s * $i,
+					opacity 0.25s * $i 0.25s * $i;
+			}
+		}
+	}
 
-  .contacts-block__social-item { 
-    opacity: 1;
-    transform: translateY(0);
-    @for $i from 1 through 3 {
-      &:nth-child(#{$i}) {
-        transition: transform 0.25s * $i opacity 0.25s * $i;
-      }
-    }
-  }
+	.contacts-block__social-link {
+		fill: #707070;
+		&:hover {
+			.contacts-block__social-icon {
+				fill: #ea246e;
+			}
+		}
+	}
 
-  .contacts-block__social-link { 
-    &:hover {
-      .contacts-block__social-icon {
-        fill: #ea246e;
-      }
-    }
-  }
+	.contacts-block__social-icon {
+		fill: #fff;
+	}
 
-  .contacts-block__social-icon {
-    fill: #fff;
-  }
+	.contacts-block__lang-link {
+		color: #fff;
+	}
+}
 
+.contacts-block__lang-list {
+	@include reset-list;
+	opacity: 0;
+	transition: opacity 0.5s;
+}
+
+.contacts-block__lang-link {
+	@include reset-link;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 5px;
+	text-transform: uppercase;
+	color: #fff;
+	font-size: 14px;
+	&.active {
+		font-weight: 700;
+	}
+	&:hover {
+		color: #ea246e;
+	}
+	@media (min-width: $breakpoint-medium) {
+		color: #707070;
+	}
 }
